<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WhatsYourStory</string>

    <!-- Login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_log_in">Log In</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_log_in_short">Log In</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- Signup -->
    <string name="prompt_password_confirmation">Confirm Password</string>
    <string name="prompt_username">Username</string>
    <string name="action_next_interests">Next</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="hello_world">Hello</string>

    <!-- Profileview -->
    <string name="username">Eytan Adar</string>
    <string name="title">UMSI Faculty</string>
    <string name="location">Ann Arbor, MI</string>
    <string name="action_message">Message</string>
    <string name="action_viewcal">View Calendar</string>
    <string name="skills">Skills:</string>
    <string name="experiences">Experience:</string>
    <string name="interests">Interests:</string>
    <string name="myname">Steve Rogers</string>
    <string name="myinterests">Interests:</string>
    <string name="myinterests1">Teaming up to fight evil</string>
    <string name="myexperiences">Experience:</string>
    <string name="myexperiences1">Leader of the Avengers</string>
    <string name="myexperiences2">Darling of America</string>
    <string name="myskills">Skills:</string>
    <string name="myskills1">Shield throwing</string>
    <string name="mylocation">Anytown, USA</string>
    <string name="mytitle">Captain America</string>

    <!-- Message, side menu, profile setting -->
    <string name="title_section1">My Profile</string>
    <string name="title_section2">Messages</string>
    <string name="title_section3">Log Out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_side_menu">SideMenu</string>
    <string name="title_activity_messages">Messages</string>

    <!-- Feed -->
    <string name="feed_title">People you might want to talk to</string>
    <string name="first">Settings</string>
    <string name="descr_overflow_button">Menu</string>
    <string name="title_activity_feed_view">FeedView</string>

</resources>
